# slotdata

./: pyproject.toml
docs/: CNAME  index.html
src/slotdata/: __init__.py
src/slotdata/core/: __init__.py
