[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
    { email = "johannes-programming@mailfence.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = []
description = "This project provides implementations of magic methods for __slots__ based classes."
keywords = []
name = "slotdata"
readme = "README.rst"
requires-python = ">=3.8"
version = "0.0.1.dev3+u"

[project.license]
file = "LICENSE.txt"

[project.urls]
Download = "https://pypi.org/project/slotdata/#files"
Index = "https://pypi.org/project/slotdata/"
Source = "https://github.com/johannes-programming/slotdata/"
Website = "https://slotdata.johannes-programming.online/"
